--- a/css/dash.css
+++ b/css/dash.css
@@ -793,9 +793,13 @@ hr.own {
   .screen.ads {
     width: 270px;
   }
-
-  .project-tab .nav-link, .nav-tabs .nav-link.active, label.caption {
+  
+  label.caption {
     font-size: 14px;
+  }
+  
+  .project-tab .nav-link, .nav-tabs .nav-link.active {
+    font-size: 12px;
   }
 
   .card-body {
