--- a/css/css.css
+++ b/css/css.css
@@ -478,14 +478,14 @@
 }
 .galleryContainer .slideShowContainer .imageHolder{
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
   position: absolute;
   opacity: 0;
 }
 .galleryContainer .slideShowContainer .imageHolder img{
   width: 100%;
-  /*height: auto;*/
-  height: 100%;
+  height: auto;
+  /*height: 100%;*/
 }
 .galleryContainer .slideShowContainer .imageHolder .captionText{
   display: none;
@@ -643,4 +643,11 @@
 @keyframes slideTextFromTop {
   from {opacity: 0;margin-top: -100px}
   to {opacity: 1;margin-top: 0px;}
+}
+
+.banner-image
+{
+  width: 100%;
+  height: 218px;
+  background-size: cover;  
 }
