--- a/css/css.css
+++ b/css/css.css
@@ -1,7 +1,15 @@
+.banner-image
+{
+  width: 100%;
+  height: 218px;
+  background-size: cover;  
+}
+
 
 .galleryContainer{
   width: 54%;
-  height: 240px;
+  /*height: 240px;*/
+  height: 218px;
   max-width: 974px;
   margin: auto;
   user-select: none;
@@ -49,10 +57,16 @@
 
 @media (max-width: 414px) 
 { 
+  .banner-image
+  {
+    height: 117px;
+  }
   .galleryContainer 
   {
     width: 95%;
-    height: 223px;
+    /*height: 223px;*/
+    /*height: 218px;*/
+    height: 117px;
     max-width: 540px;
     margin: auto;
     margin-top: -21px;
@@ -103,10 +117,15 @@
   .textbutton{
     font-size: smaller;
   }
+  .banner-image
+  {
+    height: 117px;
+  }  
   .galleryContainer 
   {
     width: 95%;
-    height: 223px;
+    /*height: 223px;*/
+    height: 117px;
     max-width: 540px;
     margin: auto;
     user-select: none;
@@ -158,10 +177,14 @@
     font-size: small; 
     margin-left: 22px;
   }
+  .banner-image
+  {
+    height: 117px;
+  }  
   .galleryContainer 
   {
     width: 98%;
-    height: 161px;
+    height: 117px;
     max-width: 540px;
     margin: auto;
     margin-top: -7px;
@@ -364,7 +387,7 @@
 .galleryContainer 
 {
   width: 95%;
-  height: 247px;
+  /*height: 247px;*/
   max-width: 540px;
   margin: auto;
   margin-top: -6px;
@@ -416,7 +439,8 @@
   .galleryContainer 
   {
     width: 95%;
-    height: 253px;
+    /*height: 253px;*/
+    height: 218px;
     max-width: 540px;
     margin: auto;
     user-select: none;
@@ -457,7 +481,7 @@
 
 .galleryContainer .slideShowContainer{
   width: 100%;
-  height: 98%;
+  height: 100%;
   overflow: hidden;
   background-color: gainsboro;
   position: relative;
@@ -645,9 +669,3 @@
   to {opacity: 1;margin-top: 0px;}
 }
 
-.banner-image
-{
-  width: 100%;
-  height: 218px;
-  background-size: cover;  
-}
