--- a/css/dash.css
+++ b/css/dash.css
@@ -1087,3 +1087,9 @@ ul {
 .title-dashboard-detail{
   font-size:24px;
 }
+.banner-image
+{
+  width: 100%;
+  height: 117px;
+  background-size: cover;  
+}
