--- a/css/template.css
+++ b/css/template.css
@@ -284,9 +284,9 @@ Disk folder
 {
   background-image: url('../image/svg/disk/bg-disk/disk-blue.svg');
 }
-.animation-dual-color
+.animation-disk-dual-color
 {
-  background-image: url('../image/svg/disk/bg-disk/dual-color.svg');
+  background-image: url('../image/svg/disk/bg-disk/disk-dual-color.svg');
 }
 .animation-disk-green
 {
