--- a/css/style-thankyou.css
+++ b/css/style-thankyou.css
@@ -69,6 +69,9 @@ hr.orn {
   margin-top: 50px;
   margin-bottom: 50px;
 }
+.konten-register{
+  min-height:570px;
+}
 
 .card {
   margin-top: 10px;
@@ -97,6 +100,10 @@ hr.orn {
 .btn-confirm-thankyou {
   font-size: 19px;
   padding: 10px 30px;    
+}
+
+.free-underline{
+  text-decoration : none!important;
 }
 
 /*MEDIA QUERIES*/
@@ -130,3 +137,4 @@ hr.orn {
 @media (min-width: 576px) and (max-width: 767.98px) {}
 
 @media (min-width: 768px) and (max-width: 991.98px) {}
+
