--- a/css/css.css
+++ b/css/css.css
@@ -590,7 +590,8 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: gainsboro;
+  background-color: transparent;
+  /*background-color: gainsboro;*/
   position: relative;
   cursor : pointer;
 }
