--- a/css/all.css
+++ b/css/all.css
@@ -4221,3 +4221,16 @@ readers do not read off random characters that represent icons */
 .fas {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900; }
+
+#modal-freetrial-expired{
+  width:250px;
+  margin:auto;
+  margin-top: 100px;
+}
+#modal-freetrial-expired img{
+  margin-top: -50px;
+  margin-left: 0px;  
+}
+#modal-freetrial-expired button{
+  margin: 0 auto;
+}
