--- a/css/kupon.css
+++ b/css/kupon.css
@@ -1,24 +1,4 @@
 @font-face { 
-  font-family: SourceSansPro-Light; 
-  src: url("../fonts/SourceSansPro-Light.otf");
-} 
-
-@font-face { 
-  font-family: SourceSansPro-Regular; 
-  src: url("../fonts/SourceSansPro-Regular.otf");
-} 
-
-@font-face { 
-  font-family: SourceSansPro-Semibold; 
-  src: url("../fonts/SourceSansPro-Semibold.otf");
-} 
-
-@font-face { 
-  font-family: SourceSansPro-Bold; 
-  src: url("../fonts/SourceSansPro-Bold.otf");
-} 
-
-@font-face { 
   font-family: opensans; 
   src: url("../fonts/OpenSans-Regular.ttf");
 }
@@ -88,6 +68,11 @@ span {
   color: #3B3B3B;
 }
 
+.fix-col {
+  padding-left : 0 !important;
+  padding-right : 0 !important;
+}
+
 .card {
   background-color: transparent;
   border : 0 !important;
@@ -102,55 +87,17 @@ span {
   padding-top: 50px;
 }
 
-/*PAGE TITLE*/
-.page-title {
-  background-image: url(../image/bg_dashboard.png);
-  background-repeat: no-repeat;
-  /*background-attachment: fixed;*/
-  background-position: center top;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  position: relative;
-  width: 100%;
-  padding-top: 150px;
-  padding-bottom: 350px;
-  margin-bottom: 0px;
-  margin-top: 0px;
+/* Banner promo */
+
+.banner-promo {
+  background-color: blue;
+  height : 240px;
 }
 
-.page-title.ads {
-  padding-top: 50px; 
-  padding-bottom: 120px;
-}
+/* Searchbox */
 
-.page-title h1 {
-  text-align: center;
-  /*color: #1B8AF3;*/
-  color: #fff;
-  font-size: 48px;
-  font-family: opensanslight;
-}
-
-.page-title h1 > strong {
-  font-family: opensansbold;
-}
-
-.pg-title {
-  padding-top: 30px;
-  text-align: center;
-  max-width: 600px;
-  display: block;
-  margin: 0 auto;
-  color: #505050;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 1.3;
-}
-
-.pg-title.small{
-  font-size: 20px;
+.searchbox {
+  padding: 35px 20px;
 }
 
 /* Pricing Box style */
@@ -182,20 +129,6 @@ span {
   color : #fff;
   padding-top: 8px;
   padding-bottom: 1px;
-}
-
-.btn-bio {
-  background-image: linear-gradient(rgb(7, 165, 10), rgb(7, 165, 10)) !important;
-  background-position: 50% 50% !important;
-  padding: 8px 40px !important;
-  border-radius: 100px;
-  color : #fff !important;
-  font-family: opensansxbold;
-}
-
-.btn-bio:hover {
-  background-image: linear-gradient(rgb(51, 145, 188), rgb(51, 145, 188)) !important;
-  color : #fff !important;
 }
 
 .left-ribbon {
@@ -458,7 +391,7 @@ sup {
   background: #F6A82A;
 }
 
-.bg-pricing {
+.bg-kupon {
   background : url('../image/bg-white-motive.png') no-repeat;
   background-position: 0 60%;
   background-size: cover;
@@ -752,18 +685,6 @@ sup {
   }
 } 
 
-@media screen and (min-width: 992px) 
-{
-   .card.primary {
-    top: -230px;
-    z-index: 2;
-  }
-
-  .card.secondary {
-    top: -168px;
-  }
-}
-
 @media (min-width: 768px) and (max-width: 991px) {
    /* pricing */
 
@@ -945,7 +866,6 @@ sup {
   .notes-responsive {
     padding-left: 5%;
     padding-right: 5%;
-    font-size : 18px;
   }
 
   .page-title h1 {
